# synthoseis

./: .env  .gitignore  CLAUDE.md  DEVELOPMENT_GUIDE.md  environment.yml  main.py  pyproject.toml  pyproject.toml.vaca  pytest.ini  requirements.txt
.agentic-docs/: application-overview.md  implementation-plan-zarr-v3.md  modernization-plan.md  storage-usage.md  zarr-v3-migration-spec.md
.agentic-docs/product/: mission-lite.md  mission.md  roadmap.md  tech-stack.md
.agentic-docs/tasks/: mdio-conversion-tasks.md
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/chatmodes/: analyze-product.chatmode.md  create-spec.chatmode.md  create-tasks.chatmode.md  execute-tasks.chatmode.md  plan-product.chatmode.md
.github/instructions/: analyze-product.instructions.md  create-spec.instructions.md  create-tasks.instructions.md  execute-task.instructions.md  execute-tasks.instructions.md  plan-product.instructions.md  post-execution-tasks.instructions.md
agent-os/: config.yml
config/: example.json  test_config.json
datagenerator/: Closures.py  Faults.py  Geomodels.py  Horizons.py  Parameters.py  RPMConfig.py  Salt.py  Seismic.py  histogram_equalizer.py  logging_config.py  output_writer.py  simplexNoise.py  util.py
datagenerator/faults/: README.md  __init__.py  fault_generator.py  (+5 more)
notebooks/: indexing_codebase.ipynb  synthoseis-quick-start.ipynb  zarr_volumes.ipynb
rockphysics/: RockPropertyModels.py
tests/: conftest.py  test_faults.py  test_horizons.py  test_lazy_imports.py  test_no_shim.py  test_output_writer.py  test_parameters.py  test_perlin_vectorised.py  test_rpm_config.py  test_storage_mdio.py
(+5 files in other folders)
