[project]
name = "synthoseis"
version = "2.5.1"
description = "Generating seismic data and associated labels to train deep learning networks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bruges>=0.5.4",
    "matplotlib",
    "noise>=1.2.2",
    "numpy<2",
    "plotly",
    "pydantic>=2.11.4",
    "pytest>=8.3.5",
    "ruff>=0.10.0",
    "scikit-image",
    "scipy",
    "setuptools>=76.0.0",
    "tables>=3.9.2",
    "tqdm",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
