[project]
name = "synthoseis"
version = "2.5.1"
description = "Generating seismic data and associated labels to train deep learning networks."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "bruges",
    "matplotlib",
    "noise",
    "numpy<2",
    "plotly",
    "pydantic",
    "ruff",
    "scikit-image",
    "scipy",
    "setuptools>=80.7.1",
    "tqdm",
    "zarr>=2.18.2",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
